@@ -9,6 +9,8 @@ get_header(); ?>
 		
 		<section id="content" class="primary" role="main">
 		
+		<?php if ( function_exists( 'themezee_breadcrumbs' ) ) themezee_breadcrumbs(); ?>
+		
 		<?php get_template_part( 'featured-content-slider' ); ?>
 		
 		<?php if (have_posts()) : while (have_posts()) : the_post();
