@@ -4,7 +4,8 @@ Anderson Lite Changelog
 
 Version 1.3
 -----------------------------------
-[added] basic support for wooCommerce
+[added] basic support for wooCommerce plugin
+[added] support for ThemeZee Breadcrumbs plugin
 [added] custom header image settings
 [added] email icon to social menu
 
